<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_feedback_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/feedback_label"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size" />

            <RadioGroup
                android:id="@+id/feedback_types_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:padding="10dp"
                android:showDividers="middle|end">

                <RadioButton
                    android:id="@+id/bug_radiobutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/feedback_bug_type"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/improvement_radiobutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/feedback_improvement_type"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/suggestion_radiobutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/feedback_suggestion_type"
                    android:textSize="@dimen/text_size" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

</LinearLayout>