<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/fragmentIncomeCall"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/infoAboutCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/incVideoCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/call_incoming_video_call"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incAudioCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/call_incoming_audio_call"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/callerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/incAudioCall"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_rounded_white_blue"
            android:gravity="center_vertical|center_horizontal"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="10dp"
            android:text="User 5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alsoOnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/callerName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/also_on_call"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/otherIncUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alsoOnCall"
            android:layout_centerHorizontal="true"
            android:text="User 1, User 2, User 3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/dark_gray"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp">

        <ImageButton
            android:id="@+id/rejectBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="40dp"
            android:background="@drawable/selector_call_end"
            android:gravity="center_vertical"
            android:src="@drawable/ic_call_end" />

        <ImageButton
            android:id="@+id/takeBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="40dp"
            android:background="@drawable/selector_call_take"
            android:gravity="center_vertical"
            android:src="@drawable/ic_call" />

    </RelativeLayout>

</RelativeLayout>